Remove ignored MaxPermSize argument